# advent-of-code

./: .gitignore  README.md
2020/: Cargo.toml
2020/src/: main.rs
2022/: README.md
2022/c++/: main
2022/done/: 1.1.rs  1.2.rs  11.1.rs  11.2.rs  12.1.js  13.1.py  14.1.java  14.2.java  15.1.rs  16.1.rs  18.2.py  19.1.rs  21.2.rs  4.2.rs  5.1.py  5.2.py  6.1.py  7.2.java  8.1.rs  8.2.rs  9.1.java
2023/: REAMDE.md  state.json
2023/_adventer/: Cargo.toml
2023/_adventer/src/: command.rs  language.rs  main.rs  problem.rs  resource.rs  run.rs  state.rs  update.rs
2023/_cache/: 1.html  2.html  3.html
2023/_solutions/: 1.0.py  1.1.py  10.0.rs  10.1.rs  11.0.rs  11.1.rs  12.0.rs  12.1.rs  13.0.rs  2.0.rs  2.1.rs  3.0.py  4.1.rs  5.0.rs  5.1.rs  6.0.rs  6.1.rs  7.0.rs  7.1.rs  8.0.rs  8.1.rs  9.0.rs
2023/python/: main.py
2023/rust/: Cargo.toml
2023/typescript/: README.md  bun.lockb  index.ts  package.json
2024/: .funky  .gitignore  state.json
2024/_adventer/: Cargo.toml
2024/_solutions/: 1.0.py  1.1.py  10.0.rs  10.1.rs  11.0.rs  11.1.rs  12.0.rs  12.1.rs  13.0.rs  2.0.py  2.1.py  3.0.py  3.1.py  4.0.py  4.1.py  5.0.rs  5.1.rs  6.0.rs  6.1.rs  7.0.rs  7.1.rs  8.0.rs  8.1.rs  9.0.rs  9.1.rs
2024/rust/: Cargo.toml
advent_2021/: Cargo.toml
advent_2021/src/: main.rs
advent_2022/done/: 10.1.py  10.2.py  12.2.js  15.2.rs  16.2.rs  19.2.rs  2.1.java  3.1.rs  3.2.rs  6.2.py
advent_2022/java/: Main.java
c++/: main.cpp
done/: 13.2.py  17.1.java  17.2.java  18.1.py  2.2.java  20.1.js  21.1.rs  4.1.rs  7.1.java
java/: Main.java
rust/src/: main.rs
(+25 files in other folders)
