[package]
name = "_adventer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = {version = "4.4.10", features = ["derive"]}
dialoguer = "0.11.0"
duct = "0.13.6"
http = "0.2"
itertools = "0.12.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
scraper = "0.18.1"
self-replace = "1.3.7"
serde = {version = "1.0.193", features = ["derive"]}
serde_json = "1.0.108"
thiserror = "1.0.50"
